<resources>
    <string name="app_name">Migraine</string>
    <string name="nouvelle_migraine">Nouvel événement</string>
    <string name="migraine_en_cours">Evénement en cours</string>
    <string name="Config">Configuration</string>
    <string name="Historique">Historique</string>
    <string name="Graphique">Graphiques</string>
    <string name="New">Nouvel événement</string>
    <string name="info_1">Nombre d&#180;événement:</string>
    <string name="info_2">Liste d&#180;événements</string>>
    <string name="info_3">00</string>
    <string name="info_4">01/01/2016</string>
    <string name="info_5">00:00</string>
    <string name="nouveau_nom">Nom (non obligatoire)</string>
    <string name="ok">Ok</string>
    <string name="info_date">Date:</string>
    <string name="actuelle_date">01/01/2016</string>
    <string name="info_heure">Heure:</string>
    <string name="actuelle_heure">00:00</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="nouvelle_migraine_pb_insertion_croisee">Attenion\nProblème d&#180;insertion dans la base Croisées\nNe sera pas fait.</string>
    <string name="nouvelle_migraine_pb_insertion_douleur">Attention\nProblème d&#180;insertion dans la base Douleur\nNe sera pas fait.</string>
    <string name="nouvelle_migraine_pb_insertion_migraine">Attention\nProblème d&#180;insertion dans la base Migraine\nNe sera pas fait.</string>
    <string name="info">Informations</string>
    <string name="quit">Quitter</string>
    <string name="empty">Liste vide</string>
    <string name="nouveau_medicament_dose">Medicament et dose</string>
    <string name="nouvelle_dose">Nouvelle dose</string>
    <string name="attribut_comprime">Comprimé</string>
    <string name="nop">------</string>
    <string name="annuler">Annuler</string>
    <string name="ajout">Ajouter</string>
    <string name="commentaire">Commentaire sur votre migraine: avec aura (et le type), ou sans aura. Le contexte déclencheur... </string>
    <string name="fin_de_migraine">Fin de migraine</string>
    <string name="migraine_finie">Migraine terminée. Vous ne pouvez pas la reprendre.</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="recycle">recycle</string>
    <string name="dmy">dd/mm/yyyy</string>
    <string name="export">Export des données</string>
    <string name="reprise_evement">Reprise dernier évenement</string>
    <string name="bouton_chgt_detat">Migraine notée terminée</string>
    <string name="copyleft">
        Par R. Suinot &#60; remi@suinot.org &#62;\n
        Version alpha 0.001 du 21/12/2016\n
        Cette application vous permet de noter vos migraines, la date, donner une note à vos douleurs (entre 0 et 10) et de noter ce que vous prenez comme médicament.\n
        Encore en développement.
    </string>
    <string name="copyleft_ok">J&#180;ai lu</string>
    <string name="textview3">Choix du médicament: </string>
    <string name="configuration_nouveau_medicament">Nouveau Médicament</string>
    <string name="configuration_annulation">Annulation des modifications</string>
    <string name="configuration_sauvegarde_medicaments">Sauvegarde de la base de données Médicaments</string>
    <string name="configuration_sauvegarde_medicaments_erreur">Erreur lors de la sauvegarde de la base de données Médicaments</string>
    <string name="configuration_erreur_sup_medicament">Erreur lors de l&#180;invalidation du médicament.\nNe sera pas exécuté ! </string>
    <string name="configuration_erreur_media">pas de media externe monté</string>
    <string name="configuration_copie_termine">"Copies terminées. Merci de votre patience"</string>
    <string name="configuration_confirme_suppression_medicament">Voulez vous vraiment supprimer</string>
    <string name="erreur_get_etat_cours">"Click cours : Erreur d&#180;état de l&#180;événement",</string>
    <string name="erreur_get_etat_long">"Click long: Erreur d&#180;état de l&#180;événement",</string>
    <string name="texte_item_historique_unitaire_douleur">Douleur: </string>
    <string name="texte_item_historique_unitaire_medicament">Medicament: </string>
    <string name="pas_de_medicament"> Pas de médicament</string>

</resources>
