<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/titre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Point_Entree">
    <LinearLayout
        android:id="@+id/Nb_Evenements"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="@color/fond_general"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/B_new_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/New"/>

        <Button
            android:id="@+id/B_Historique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Historique"/>


        <Button
            android:id="@+id/B_graphique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Graphique"
        />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#bffbe3"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/t_Info_1"
                    android:layout_column="0"
                    android:layout_gravity="start|center_vertical"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:text="@string/info_1"/>

                <EditText
                    android:id="@+id/T_nombre_evnt"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/info_3" android:layout_width="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/t_Info_2"
                    android:layout_column="0"
                    android:layout_gravity="start|center_vertical"
                    android:autoLink="none"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="bottom"
                    android:text="@string/info_2"/>
            </TableRow>

            <TableRow
                android:id="@+id/Last_Evenement"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/t_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:text="@string/info_4"/>

                <EditText
                    android:id="@+id/t_heure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="time"
                    android:text="@string/info_5"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>


</RelativeLayout>
