<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/titre"
                tools:context=".Nouvelle_Migraine">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/fond_general"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Etat_Evenement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Etat_evenement"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" android:layout_gravity="center_vertical|center_horizontal">
            <EditText
                android:id="@+id/nouveau_nom"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:hint="@string/nouveau_nom"/>
            <Button
                android:text="Ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nom_ok"
            />
        </LinearLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/info_date"/>
                <TextView
                    android:id="@+id/Actuelle_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:clickable="false"
                    android:enabled="true"
                    android:hint="dd/mm/yyyy"
                    android:inputType="date"
                    android:maxLength="10"
                    android:text="@string/actuelle_date"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/info_heure"/>
                <TextView
                    android:id="@+id/Actuelle_Heure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:clickable="false"
                    android:inputType="time"
                    android:text="@string/actuelle_heure"/>
                <ImageButton
                    android:id="@+id/New_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="30dp"
                    android:cropToPadding="true"
                    android:src="@drawable/recycle"/>

            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"/>


            <RadioGroup
                android:id="@+id/Radio_Douleur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:orientation="horizontal"
                android:weightSum="0">

                <RadioButton
                    android:id="@+id/defaultSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="3"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="4"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="5"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="6"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="7"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="8"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="9"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_radio_button"
                    android:button="@null"
                    android:gravity="center"
                    android:text="10"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                />
            </RadioGroup>


            <SeekBar
                android:id="@+id/Seek_Douleur"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:paddingEnd="6dip"
                android:paddingStart="6dip"
                android:progress="0"
                android:progressDrawable="@drawable/progress"
                android:thumb="@drawable/curseur"
                android:thumbOffset="10dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"/>

        <Spinner
            android:id="@+id/Medicaments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.67"
            android:gravity="bottom"
            android:orientation="horizontal" tools:layout_weight="0.8">

            <com.orhanobut.simplelistview.SimpleListView
                android:id="@+id/Elements_selectionnes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:id="@android:id/empty"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/empty"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B_Enregistrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:longClickable="false"
                android:text="@string/enregistrer"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
